# h200-mug-positioning

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .license-header.txt  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  COMPREHENSIVE_HANDOVER_DOCUMENT.md  COMPREHENSIVE_HANDOVER_DOCUMENT_UPDATE.md  DEPLOYMENT_GUIDE.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  USER_MANUAL.md  claude-instructions.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: deploy.yml  test.yml
configs/monitoring/: README.md  alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
configs/monitoring/alertmanager/: alertmanager.yml
configs/monitoring/grafana/: grafana.ini
configs/monitoring/grafana/dashboards/: dashboard-config.yml
configs/nginx/: nginx.conf
dashboard/: .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  index.html  nginx.conf  tailwind.config.js  vite.config.ts
dashboard/src/: App.vue
dashboard/src/api/: client.ts  websocket.ts
dashboard/src/assets/css/: main.css
dashboard/src/components/analysis/: AnalysisDetails.vue  AnalysisHistory.vue  ImageAnalysisViewer.vue  ImageUpload.vue
dashboard/src/components/dashboard/: ActivityFeed.vue  (+4 more)
dashboard/src/router/: index.ts
dashboard/src/stores/: auth.ts  dashboard.ts  notifications.ts  theme.ts
dashboard/src/types/: api.ts
dashboard/src/utils/: logger.ts
dashboard/src/views/: Analysis.vue  Dashboard.vue  Login.vue  Metrics.vue  NotFound.vue  Rules.vue  Servers.vue  Settings.vue
docker/: Dockerfile.base  Dockerfile.serverless  Dockerfile.test  Dockerfile.timed  preload_models.py
docs/: CHANGELOG.md  README.md  model_integration.md
docs/api/: README.md  endpoints.md  models.md
docs/developer-guides/: architecture.md  contributing.md  deployment.md  development.md
docs/handover/: ACTIVE_HANDOVER.md  README.md
docs/handover/archive/: 2025-09-phase1-infrastructure.md
docs/operations/: monitoring.md  performance.md  security.md  troubleshooting.md
docs/reference/: configuration.md  error-codes.md
docs/user-guides/: dashboard-guide.md  quick-start.md  rules-management.md  user-manual.md
scripts/: run_tests.sh  setup-monitoring.sh  test-monitoring.sh  validate-monitoring.sh  verify-production.sh
scripts/deploy/: README.md  build_and_push.sh  deploy_to_runpod.py  health_check.sh
src/: __init__.py
src/control/: __init__.py
src/control/api/: README.md  __init__.py  config.py  main.py  test_api.py
src/control/manager/: README.md  __init__.py  auto_shutdown.py  integration.py  metrics.py  notifier.py  orchestrator.py  resource_monitor.py  server_manager.py  status_tracker.py  test_control_plane.py
src/core/: __init__.py  analyzer.py  cache.py  pipeline.py  positioning.py  utils.py
src/core/mcp/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  auth.py  client.py  example.py  integration.py  models.py  server.py  test_mcp.py  tools.py
src/core/models/: __init__.py  base.py  clip.py  manager.py  yolo.py
src/core/rules/: README.md  __init__.py  engine.py  examples.py  executor.py  models.py  parser.py  storage.py
src/database/: __init__.py  get_db.py  mongodb.py  r2_storage.py  redis_client.py
src/deployment/: README.md  __init__.py  client.py  config.py  deployer.py  example.py  manager.py  orchestrator.py  validator.py  volume.py
src/integrations/: README.md  __init__.py  enhanced_notifier.py  example_usage.py  manager.py  n8n.py  notifications.py  templated.py  test_integrations.py
src/utils/: __init__.py  logging_config.py  secrets.py
tests/: README.md  __init__.py  base.py  conftest.py  test_model_integration.py  test_runner.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/fixtures/: __init__.py  database_fixtures.py  external_service_fixtures.py
tests/integration/: __init__.py  test_api_analysis.py  test_api_dashboard.py  test_api_rules.py  test_api_servers.py
tests/performance/: __init__.py  test_gpu_operations.py
tests/unit/: __init__.py  test_analyzer.py  test_cache.py  test_models.py  test_rules_engine.py
(+20 files in other folders)
